<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Life Goals App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_goal">Add Goal</string>
    <string name="title_activity_your_goals">YourGoalsActivity</string>
    <string name="title_activity_your_goal_info">YourGoalInfoActivity</string>
    <string name="title_activity_all_goals">AllGoalsActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_your_added_goals">YourAddedGoals</string>

    <!-- facebook-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_add_to_fav">Add to favorites!</string>
    <string name="msg_share">Share</string>
    <string name="msg_wait_image_load">Wait for the image to load first!</string>
    <string name="msg_added_to_fav">Added to favorites!</string>
    <string name="msg_shared">Shared successfully!</string>
    <string name="msg_share_error">Error while trying to share the bitmap!</string>
    <string name="msg_not_add_fav">Error! Not added to favorites!</string>
    <string name="msg_remove_fav">Remove from favorites!</string>
    <string name="msg_removed_fav">Removed from favorites!</string>
    <string name="msg_save_picture">Save picture!</string>
    <string name="msg_bitmap_not_saved">The picture was not saved because of an error!</string>
    <string name="msg_picture_saved">Picture saved in the folder \'@1\' !</string>
    <string name="msg_second">second</string>
    <string name="msg_minute">minute</string>
    <string name="msg_hour">hour</string>
    <string name="msg_day">day</string>
    <string name="msg_seconds">seconds</string>
    <string name="msg_minutes">minutes</string>
    <string name="msg_hours">hours</string>
    <string name="msg_days">days</string>
    <string name="msg_ago">ago</string>


    <!-- feed-->
    <string name="msg_no_posts">You reached the end! No more posts!</string>
    <string name="msg_check_internet">Please check your internet connection...</string>
    <string name="msg_no_new_posts">No new posts yet! Try again later!</string>
    <string name="msg_settings">Settings</string>


    <string name="msg_share_text">Do you want to see every new funny awkward moment? Get the app! https://play.google.com/store/apps/details?id=com.fainosag.virginradiolebanon</string>
    <string name="msg_app_url">https://play.google.com/store/apps/details?id=com.fainosag.virginradiolebanon</string>
    <string name="msg_enable_not">Enable notifications</string>
    <string name="msg_rate_app">Rate this app!</string>
    <string name="msg_share_app">Share this app!</string>
    <string name="msg_new_posts">New posts!</string>
    <string name="msg_new_posts_arrived">New funny posts had just arrived! Click here to see them!</string>
    <string name="msg_send_feedback">Send feedback</string>
    <string name="msg_feedback">Feedback</string>
    <string name="msg_no_img_selection">No post selected yet! Please hold your finger on a photo to start selecting!</string>
    <string name="msg_collage_created">Collage successfully created and added to favorites!</string>
    <string name="msg_logout">Log out</string>
    <string name="msg_search_goals">Search goals</string>
    <string name="msg_view_goals">View your saved goals</string>
    <string name="msg_view_added_goals">View your added goals</string>
    <string name="msg_add_goals">Add new goal</string>
    <string name="msg_images_feed">Images feed</string>
</resources>
