<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/layout_drawer_container_add_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_primary_color_transparent"
            android:clickable="true"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp" >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:padding="13dp"
                android:src="@drawable/ic_plus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/msg_add_goals"
                android:textColor="@color/color_text"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.1"
            android:background="@color/color_divider" />

        <LinearLayout
            android:id="@+id/layout_drawer_container_view_added_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_primary_color_transparent"
            android:clickable="true"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp" >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:padding="13dp"
                android:src="@drawable/ic_save_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/msg_view_added_goals"
                android:textColor="@color/color_text"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_drawer_container_view_saved_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_primary_color_transparent"
            android:clickable="true"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp" >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:padding="13dp"
                android:src="@drawable/ic_save_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/msg_view_goals"
                android:textColor="@color/color_text"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.1"
            android:background="@color/color_divider" />

        <LinearLayout
            android:id="@+id/layout_drawer_container_search_goals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_primary_color_transparent"
            android:clickable="true"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp" >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:padding="13dp"
                android:src="@drawable/ic_search_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/msg_search_goals"
                android:textColor="@color/color_text"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.1"
            android:background="@color/color_divider" />
        <LinearLayout
            android:id="@+id/layout_drawer_container_feed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_primary_color_transparent"
            android:clickable="true"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp" >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:padding="13dp"
                android:scaleX="-1"
                android:scaleY="-1"
                android:src="@drawable/ic_favorite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/msg_images_feed"
                android:textColor="@color/color_text"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_drawer_container_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_primary_color_transparent"
            android:clickable="true"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp" >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:padding="13dp"
                android:scaleX="-1"
                android:scaleY="-1"
                android:src="@drawable/ic_logout_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/msg_logout"
                android:textColor="@color/color_text"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.1"
            android:background="@color/color_divider" />
    </LinearLayout>

</ScrollView>